@@ -1,3 +1,7 @@
+2001-05-22  Bruno Haible  <haible@clisp.cons.org>
+
+	* gettextize.in: Copy plural.c and touch it afterwards.
+
 2001-05-21  Alexandre Duret-Lutz  <duret_g@epita.fr>
 
 	* gettextize.in: Check for configure.ac in addition to configure.in.
