@@ -1,3 +1,8 @@
+2001-05-22  Bruno Haible  <haible@clisp.cons.org>
+
+	* Makefile.in (install-data): Install plural.c as well.
+	(uninstall): Uninstall plural.c as well.
+
 2001-05-18  Bruno Haible  <haible@clisp.cons.org>
 
 	* Makefile.in (dist): Don't assume $(srcdir) = ".". Distribute
